storm layer added visibility fixed

--- a/Map/CSS/Wellington.css
+++ b/Map/CSS/Wellington.css
@@ -105,7 +105,7 @@ body {
 	position:absolute; 
 	top:0; 
 	bottom:0;
-	left:450px;
+	left:300px;
 	margin:auto;
 	font-size: 12px;
 	height:20px;
